# PowerQueryQuack

./: .gitignore  CODEX_GOAL.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: DEVELOPMENT_PLAN.md  architecture.md  conversion-rules.md  custom-connector-policy.md  feedback-workflow.md
pqquack/: __init__.py  cli.py  enums.py
pqquack/api/: __init__.py  app.py
pqquack/confidence/: __init__.py  score.py
pqquack/convert/: __init__.py  args.py  mexpr.py  pipeline.py  source.py  types.py
pqquack/convert/rules/: __init__.py  tables.py
pqquack/convert/targets/: __init__.py
pqquack/feedback/: __init__.py  records.py
pqquack/graph/: __init__.py  build.py  cycles.py
pqquack/i18n/: __init__.py  catalog.py  detect.py
pqquack/ingest/: __init__.py  split.py
pqquack/knowledge/: __init__.py  build.py  extract_skills.py  extract_spec.py  store.py
pqquack/knowledge/data/: README.md  duckdb_skills.json  m_spec.json
pqquack/llm/: __init__.py
pqquack/parser/: __init__.py  ast.py  lexer.py  parser.py
pqquack/report/: __init__.py  assemble.py
pqquack/validate/: __init__.py  checks.py  engine.py
pqquack/web/: app.js  index.html  styles.css
samples/: README.md
samples/circular-reference/: input.pq
samples/filter/: expected.sql  input.pq
samples/multi-query-graph/: input.pq
scripts/: setup.sh
tests/: test_api.py  test_confidence.py  test_convert.py  test_graph.py  test_i18n.py  test_knowledge.py  test_parser.py  test_report.py  test_smoke.py  test_types.py  test_validate.py
