[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pqquack"
version = "0.0.1"
description = "Power Query Quack — transform Power Query (M) into native DuckDB / GizmoSQL / MotherDuck SQL."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Power Query Quack" }]
keywords = ["power query", "duckdb", "motherduck", "gizmosql", "sql", "m language"]

dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "duckdb>=1.0",
    "pydantic>=2.6",
    "pypdf>=4.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
llm = ["anthropic>=0.40"]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
    "httpx>=0.27",
]

[project.scripts]
pqquack = "pqquack.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["pqquack"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# Test fixtures embed real Power Query / SQL strings that are naturally long.
"tests/*" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
